# lego-collection-manager

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements-dev.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_empty.py  0a47cc7879de_initial_mvp_schema.py  a3c7e2f41b90_part_aliases_per_part_unique.py  b2c8e4f91a10_add_owned_sets_age.py  b4e5f6a71c02_catalog_set_integer_number.py  c6d7e8f91a23_inventory_line_element_ids.py  d4f2a19b7c30_minifig_image_blobs.py  d9f3a2b18e40_phase9_owned_set_inventory_lines.py  e1b4c7d29f50_phase10_images_in_db.py  (+1 more)
backend/app/: __init__.py  logging_config.py  main.py
backend/tests/: conftest.py  factories.py  rebrickable_helpers.py  test_add_set_part_api.py  test_age_parse.py  test_csv_import_rebrickable.py  test_csv_import_service.py  test_element_catalog.py  test_image_blob_api.py  test_importer_logging.py  test_imports_api.py  test_instance_inventory_api.py  test_instance_ux_api.py  test_lego_set_number.py  test_local_metadata.py  test_manual_add_api.py  test_manual_add_rebrickable_draft.py  test_migration_check.py  test_migrations.py  test_missing_api.py  test_models.py  test_owned_sets_api.py  test_part_alias_service.py  test_part_aliases_api.py  test_rebrickable_client.py  test_rebrickable_client_retries.py  test_rebrickable_config.py  test_rebrickable_inventory_filters.py  test_rebrickable_mappers.py  test_rebrickable_sync_api.py  test_rebrickable_sync_service.py  test_search_api.py  test_set_list_parser.py  test_set_parts_api.py  test_theme_catalog.py
(+138 files in other folders)
