[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lego-collection-manager-backend"
version = "0.1.0"
description = "Backend API for LEGO Collection Manager"
readme = "README.md"
# Project rules target 3.12+; 3.10+ is allowed so common distro defaults can install the package.
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

